vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__nested_expression_par_first.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"(1 + 2) + 3\")"
---
BinaryExpression
  ParenthesizedExpressionOrAggregate
    LeftPar
    ElementAssociationList
      ElementAssociation
        BinaryExpression
          LiteralExpression
            AbstractLiteral '1'
          Plus
          LiteralExpression
            AbstractLiteral '2'
    RightPar
  Plus
  LiteralExpression
    AbstractLiteral '3'
