vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__not_expression.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"not false\")"
---
UnaryExpression
  Keyword(Not)
  NameExpression
    Name
      NameDesignatorPrefix
        Identifier 'false'
