vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__null_literal.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"null\",)"
---
LiteralExpression
  Keyword(Null)
