vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__operator_symbol.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"\\\"+\\\"(1, 2)\")"
---
NameExpression
  Name
    NameDesignatorPrefix
      StringLiteral '"+"'
    ParenthesizedName
      LeftPar
      AssociationList
        AssociationElement
          ActualPart
            ActualPartExpression
              LiteralExpression
                AbstractLiteral '1'
        Comma
        AssociationElement
          ActualPart
            ActualPartExpression
              LiteralExpression
                AbstractLiteral '2'
      RightPar
