vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__physical_unit.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"1 ns\")"
---
PhysicalLiteralExpression
  PhysicalLiteral
    AbstractLiteral '1'
    Name
      NameDesignatorPrefix
        Identifier 'ns'
