vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__positional_aggregate.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"(1, 2)\")"
---
ParenthesizedExpressionOrAggregate
  LeftPar
  ElementAssociationList
    ElementAssociation
      LiteralExpression
        AbstractLiteral '1'
    Comma
    ElementAssociation
      LiteralExpression
        AbstractLiteral '2'
  RightPar
