vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__qualified_aggregate.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"foo'(others => '1')\")"
---
QualifiedExpression
  Name
    NameDesignatorPrefix
      Identifier 'foo'
  Tick
  ParenthesizedExpressionOrAggregate
    LeftPar
    ElementAssociationList
      ElementAssociation
        ElementChoices
          Choices
            OthersChoice
              Keyword(Others)
          RightArrow
        NameExpression
          Name
            NameDesignatorPrefix
              CharacterLiteral ''1''
    RightPar
