vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__expression__tests__qualified_expression.snap
---
source: vhdl_syntax/src/parser/productions/expression.rs
expression: "expr_to_test_text(\"foo'(1+2)\")"
---
QualifiedExpression
  Name
    NameDesignatorPrefix
      Identifier 'foo'
  Tick
  ParenthesizedExpressionOrAggregate
    LeftPar
    ElementAssociationList
      ElementAssociation
        BinaryExpression
          LiteralExpression
            AbstractLiteral '1'
          Plus
          LiteralExpression
            AbstractLiteral '2'
    RightPar
